. [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
		automatically once the view is displayed (iOS only)
. [NEW] Director: FPS & seconds per frame are displayed at the same time
. [NEW] EventDispatcher / TouchDispatcher: They are no longer singletons. They are an ivar of director.
. [NEW] Scheduler: It is no longer a singleton. It is an ivar of director
. [NEW] Template: RootViewController viewDidAppear / viewDidDissapear will run/pause the director
. [NEW] Template: AppController rootViewController is a UINavigationController
. [FIX] EaseActions: EaseIn/EaseOut actions support float arguments
. [FIX] Test: ShaderTest works (issue #1285)
. [FIX] Texture2D: Uses CGImageRef instead of UIKit for iOS API

version 2.0-beta 27-Nov-2011
. [NEW] All: forward-ported changes from v1.1 branch:
		reorderSprite: faster reordering sprites/nodes
		Particle batches: Particles support batch rendering
		TMX parse from memory
		events fixes
		ARC compatible
. [NEW] Director: Added API to display Milliseconds Per Frame
. [NEW] LabelBMFont: Added support for alignment, also in multiline
. [NEW] Node: Added glServerState property. Ideal to enable/disabled blending for certain nodes.
. [NEW] Particle: ParticlePoint removed
. [NEW] Shader: Added AlphaTesting shader
. [NEW] DrawingPrimitives: DrawPoint and PointSize fixed both on Mac and iOS. DrawPoly fixed on Mac
. [FIX] Node#draw() Added helper macro to setup draw
. [FIX] Node#draw() removed [super draw]. Draw() should be "atomic". It shall not depend on a possible state of super class.
. [FIX] ccGLState: Added cache for texture unit and GL_BLEND
. [FIX] Paticles: Faster initialization: texCoords are generated only once.
. [FIX] SpriteFrameCache: readded API to create spriteFrames from CCTexture2D
. [FIX] Shaders: Using correct precision. Fixed performance issue with iOS 5
. [FIX] Shaders: Improved internal API and constants names